tests/import/use_faulty.sy
use 3
use fn
use blob
use -
use +
use =
use {}
use ret/break
use

start :: fn {}

// error: @1
// error: @2
// error: @3
// error: @4
// error: @5
// error: @6
// error: @7
// error: @8
// error: @9
